--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
         </div>
 
         <div class="cc-logo">
-          <span><img src="public/cc-icon.svg" alt="ícone padrão de cartão" /></span>
+          <span
+            ><img src="public/cc-icon.svg" alt="ícone padrão de cartão"
+          /></span>
           <span
             ><img
               src="public/cc-default.svg"
