changes on readme.md

--- a/index.html
+++ b/index.html
@@ -102,12 +102,10 @@
         </div>
 
         <div class="cc-logo">
-          <span
-            ><img src="public/cc-icon.svg" alt="ícone padrão de cartão"
-          /></span>
+          <span><img src="/cc-icon.svg" alt="ícone padrão de cartão" /></span>
           <span
             ><img
-              src="public/cc-default.svg"
+              src="/cc-default.svg"
               alt="ícone do cartão de crédito selecionado"
           /></span>
         </div>
