Final commit on main.js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="public/cc-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rocketpay</title>
+    <title>Starpay</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
@@ -17,7 +17,7 @@
   <body>
     <div id="app">
       <header>
-        <img src="logo.svg" alt="ícone rocketpay" />
+        <img src="logo.svg" alt="ícone starpay" />
       </header>
 
       <section class="cc">
